force-app/main/default/objects/User_Story__c/User_Story__c.object-meta.xml
<CustomObject>
    <label>User_Story</label>
    <nameField>
        <label>User_Story-</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User_Story</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>