force-app/main/default/objects/User_Story__c/fields/Build_Status__c.field-meta.xml
<CustomField>
    <fullName>Build_Status__c</fullName>
    <label>Build Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>