force-app/main/default/objects/User_Story__c/fields/Commit_Time__c.field-meta.xml
<CustomField>
    <fullName>Commit_Time__c</fullName>
    <label>Commit Time</label>
    <type>DateTime</type>
</CustomField>