force-app/main/default/objects/User_Story__c/fields/Deliver_Status__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Status__c</fullName>
    <label>Deliver Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>