force-app/main/default/objects/User_Story__c/fields/Feature_Branch__c.field-meta.xml
<CustomField>
    <fullName>Feature_Branch__c</fullName>
    <label>Feature Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>