force-app/main/default/objects/User_Story__c/fields/Metadata_Count__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Count__c</fullName>
    <label>Metadata Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>