force-app/main/default/objects/User_Story__c/fields/Metadata_Last_Scan__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Last_Scan__c</fullName>
    <label>Metadata Last Scan</label>
    <type>DateTime</type>
</CustomField>