force-app/main/default/objects/User_Story__c/fields/Metadata_Status__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Status__c</fullName>
    <label>Metadata Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scanning</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>