force-app/main/default/objects/User_Story__c/fields/Pipeline_Test__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Test</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>User_Story (Pipeline Test)</relationshipLabel>
    <relationshipName>User_Story</relationshipName>
    <type>Lookup</type>
</CustomField>