force-app/main/default/objects/User_Story__c/fields/PR_Status__c.field-meta.xml
<CustomField>
    <fullName>PR_Status__c</fullName>
    <label>PR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>