force-app/main/default/objects/User_Story__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source_Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipLabel>Source_Environment</relationshipLabel>
    <relationshipName>Source_Environment</relationshipName>
    <type>Lookup</type>
</CustomField>