force-app/main/default/objects/User_Story__c/fields/Story_Number__c.field-meta.xml
<CustomField>
    <fullName>Story_Number__c</fullName>
    <displayFormat>SN-{000}</displayFormat>
    <label>Story_Number</label>
    <type>AutoNumber</type>
</CustomField>